Fix color contrast of list group and dropdown elements

--- a/scss/override/_variables.scss
+++ b/scss/override/_variables.scss
@@ -91,6 +91,8 @@ $dropdown-link-hover-bg: $azurite;
 $dropdown-link-active-bg: $white;
 $dropdown-link-active-color: $blue;
 $dropdown-link-disabled-color: $gray-600;
+$dropdown-divider-bg: $white;
+$dropdown-header-color: $white;
 
 // >> Forms
 // fusv-disable
